# simpleCNN

./: .gitignore  CMakeLists.txt  README.md  byteswap.h  conv2mul.py  conv2mul.pyx  example.cpp  main.cpp  main.py  make_test_data.py  model.cfg  npy.h  play_ground.cpp  re_save_model.py  torch_conv.py
CNN/: cnn.h  concat_layer_t.h  conv_layer_t.h  dropout_layer_t.h  fc_layer.h  layer_t.h  pool_layer_t.h  relu_layer_t.h  tensor_t.h  types.h  upsample_layer_t.h
python/: conv2mul.py  main.py  make_test_data.py  model_608.ckpt  re_save_model.py  setup.py  torch_conv.py
